Connecting Frontend to Backend

--- a/public/host.html
+++ b/public/host.html
@@ -14,7 +14,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = io(https://online-impostor.onrender.com/);
     document.getElementById("hostForm").onsubmit = (e) => {
       e.preventDefault();
       const settings = {
