Connecting Frontend to Backend

--- a/public/join.html
+++ b/public/join.html
@@ -15,7 +15,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = io(https://online-impostor.onrender.com/);
 
     socket.on("updateLobbyList", (lobbies) => {
       const listDiv = document.getElementById("lobbies");
